--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,18 @@
 .navbar{
+    width: 100%;
     color: white;
+    font-size: 14px;
+    position: fixed;
+    top: 0;
+    z-index: 10000;
+    background: linear-gradient(to top,transperant 0%,rgb(0,0,0,0.35) 50%);
+    transition: background-color 0.5s;
+
+    &.scrolled{
+        background-color: var(--main-color);
+        
+    }
+
     .container{
         padding:  0px 50px;
         display: flex;
@@ -27,12 +40,46 @@
         .right{
             display: flex;
             align-items: center;
+
+            .icon{
+                margin: 0 15px;
+                cursor: pointer;
+            }
+
             img{
                 height: 35px;
                 width:35px;
                 border-radius: 5px;
                 object-fit: cover;
                 cursor: pointer;
+            }
+
+            .profile{
+                .options{
+                    display: none;
+                    background-color: var(--main-color);
+                    border-radius: 5px;
+
+                    span{
+                        padding: 10px;
+                        cursor: pointer;
+    
+                        &:hover{
+                            color: lightgray;
+                        }
+                        &:active{
+                            transform: scale(0.85);
+                        }
+                    }
+                }
+
+                &:hover{
+                    .options{
+                        display: flex;
+                        flex-direction: column;
+                        position: absolute;
+                    }
+                }
             }
         }
     }
