--- a/src/components/listitem/listitem.scss
+++ b/src/components/listitem/listitem.scss
@@ -13,13 +13,71 @@
         object-fit: cover;
     }
 
+    video{
+        width: 100%;
+        height: 140px;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     &:hover{
         width:325px;
         height: 300px;
+        position: absolute;
+        top: -150px;
+        border-radius: 5px;
+        -webkit-box-shadow: 0px 2px 15px 0px rgba(255,255,255,0.22); 
+        box-shadow: 0px 2px 15px 0px rgba(255,255,255,0.22);
 
         img{
             height: 140px;
-            object-fit: cover;
+        }
+
+        .itemInfo{
+            display: flex;
+            flex-direction: column;
+            padding: 5px;
+
+            .icons{
+                display: flex;
+                margin-bottom: 10px;
+
+                .icon{
+                    border:2px solid white;
+                    padding: 5px;
+                    border-radius: 50%;
+                    margin-right: 10px;
+                    font-size: 30px;
+                }
+            }
+
+            .itemInfoTop{
+                display: flex;
+                align-items: center;
+                font-size: 14px;
+                font-weight: 600;
+                color: gray;
+                margin-bottom: 10px;
+
+                .limit{
+                    border: 1px solid gray;
+                    margin: 0 10px;
+                    padding: 1px 3px;
+                }
+
+            }
+            .desc {
+                font-size: 13px;
+                margin-bottom: 10px;
+              }
+        
+            .genre {
+                font-size: 14px;
+                color: lightgray;
+                font-weight: 600;
+              }
         }
     }
 }
