--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,13 @@
 :root{
     --main-color:#0b0b0b
 }
+
+.link{
+    color: inherit;
+    text-decoration: none;
+}
+
+.active{
+    font-weight: 600;
+    transform: scale(1.1);
+}
