--- a/src/components/rightbar/Rightbar.css
+++ b/src/components/rightbar/Rightbar.css
@@ -28,30 +28,56 @@
   margin: 30px 0;
 }
 
-
 .rightbarTitle{
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .rightbarFriendList {
-padding: 0;
-margin: 0;
-list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.rightbarFriend{
-display: flex;
-align-items: center;
-margin-bottom: 15px;
-}
-.rightbarProfileImgContainer{
-  margin-right: 10px;
-  position: relative;
+.rightbarTitle{
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 
-.rightbarProfileImg{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+.rightbarInfo{
+  margin-bottom: 30px;
+}
+
+.rightbarInfoItem{
+  margin-bottom: 10px;
+}
+
+.rightbarInfoKey{
+  font-weight: 500;
+  margin-right: 15px;
+  color: #555;
+}
+
+.rightbarInfoValue{
+  font-weight: 300;
+}
+
+.rightbarFollowings{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.rightbarFollowing{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.rightbarFollowingImg{
+  width: 100px;
+  height: 100px;
   object-fit: cover;
+  border-radius: 5px;
 }
