--- a/src/components/share/Share.css
+++ b/src/components/share/Share.css
@@ -1,8 +1,10 @@
 .share {
-  width: 100%;
+  width: 80%;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  margin: auto;
+  margin-top: 20px;
 }
 
 .shareWrapper {
