--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -62,16 +62,30 @@
 }
 
 .sidebarFollowButton {
-  margin-top: 30px;
+ 
   margin-bottom: 10px;
   border: none;
   background-color: #1872f2;
   color: white;
   border-radius: 5px;
   padding: 5px 10px;
-  display: flex;
-  align-items: center;
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
+ 
+}
+
+.sidebarFollowContainer{
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+ 
+
+}
+.sidebarFollow{
+  margin-left: 30px;
+  display: flex;
+  justify-content: center;
+ 
 }
