--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  flex: 2;
+  /* flex: 2; */
   height: calc(100vh - 50px);
   overflow-y: scroll;
   position: sticky;
@@ -84,7 +84,7 @@
 
 }
 .sidebarFollow{
-  margin-left: 30px;
+
   display: flex;
   justify-content: center;
  
