--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -31,7 +31,7 @@
             }
         }
     }
-    .container{
+    .register_container{
         width: 100%;
         height: 100%;
         display: flex;
