--- a/src/components/rightbar/Rightbar.css
+++ b/src/components/rightbar/Rightbar.css
@@ -96,6 +96,20 @@
   font-weight: 500;
   cursor: pointer;
 }
+.rightbarMessageButton{
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #339d5a;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
 
 .rightbarFollowButton:focus{
   outline: none;
