--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -6,15 +6,23 @@
   flex: 9;
 }
 
-.profileCover {
-  height: 320px;
+.AllContainer {
+  height: 250px;
   position: relative;
+}
+
+.CouldBeCoverImg {
+  width: 250px;
+  height: 100%;
 }
 
 .profileCoverImg {
   width: 100%;
   height: 250px;
   object-fit: cover;
+  position: absolute;
+  top: 0px;
+  margin: auto;
 }
 
 .profileUserImg {
@@ -49,8 +57,6 @@
   display: flex;
 }
 
-
-
 /*  */
 
 .profileChangePictureContainer {
@@ -58,48 +64,62 @@
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-background-color: #fff;
+  background-color: #fff;
   margin: auto;
   margin-top: 50px;
   z-index: 99;
-
 }
 
-.couldBeProfileImgContainer{
+.CoverChangePictureContainer {
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  background-color: #fff;
+  margin: auto;
+  z-index: 80;
+}
 
+.couldBeCoverImgContainer {
   display: flex;
   position: relative;
-
   justify-content: space-around;
-
-
-
-
+  z-index: 120;
 }
-.CouldbeCancelImg{
 
+.CouldBeCoverImg {
+  width: 100%;
+  height: 250px;
+  z-index: 99;
+}
+
+.couldBeProfileImgContainer {
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+}
+
+.CouldbeCancelImg {
   position: absolute;
   top: 0;
   right: 0;
-  margin: 5px 5px ;
- 
+  margin: 5px 5px;
+  z-index: 9000;
 }
-.CouldBeProfileImg{
+.CouldBeProfileImg {
   width: 300px;
   height: 200px;
   margin-top: 20px;
 }
 
-
-.DivOfButton{
- 
+.DivOfButton {
   text-align: center;
 }
-.CouldBeSubmitButton{
+
+.CouldBeSubmitButton {
   background-color: green;
   border: none;
   padding: 10px 5px;
   border-radius: 10px;
   color: white;
-  margin: 20px 0;
+  margin: 50px 400px 0px 0px;
 }
