searching feature completed

--- a/src/components/navbar/movieNavbar.scss
+++ b/src/components/navbar/movieNavbar.scss
@@ -81,6 +81,12 @@
                     }
                 }
             }
+
+            .title_search{
+                width: 250px;
+                margin-right: 5px;
+                padding:0 5px;
+            }
         }
     }
 }
